--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,7 @@ services:
   memcached:
     image: 'memcached:latest'
     container_name: memcached
-    deploy:
-      restart_policy:
-        condition: always
+    restart: always
     networks:
       backend:
         ipv4_address: 172.20.0.3
@@ -18,9 +16,7 @@ services:
       - '3306:3306'
     volumes:
       - './mysql:/var/lib/mysql'
-    deploy:
-      restart_policy:
-        condition: always
+    restart: always
     networks:
       backend:
         ipv4_address: 172.20.0.6
@@ -29,18 +25,14 @@ services:
     container_name: mailhog
     ports:
       - '1025:8025'
-    deploy:
-      restart_policy:
-        condition: always
+    restart: always
     networks:
       backend:
         ipv4_address: 172.20.0.4
   redis:
     image: 'redis:latest'
     container_name: redis
-    deploy:
-      restart_policy:
-        condition: always
+    restart: always
     networks:
       backend:
         ipv4_address: 172.20.0.2
@@ -51,9 +43,7 @@ services:
     volumes:
       - '~/PhpstormProjects:/usr/share/nginx/html'
       - './nginx:/etc/nginx'
-    deploy:
-      restart_policy:
-        condition: always
+    restart: always
     ports:
       - '80:80'
       - '443:443'
@@ -69,9 +59,7 @@ services:
     volumes:
       - '~/PhpstormProjects:/usr/share/nginx/html'
       - './php-fpm:/etc/php/7.2/fpm/'
-    deploy:
-      restart_policy:
-        condition: always
+    restart: always
     networks:
       frontend:
         ipv4_address: 172.10.0.2
