--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
         libmemcached-dev \
         zip \
         unzip \
-        php-pclzip \
+        zlib1g-dev \
     && docker-php-ext-install -j$(nproc) bcmath pdo_mysql \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
