--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get update && apt-get install -y \
         zlib1g-dev \
     && docker-php-ext-install -j$(nproc) bcmath pdo_mysql \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install -j$(nproc) gd \
+    && docker-php-ext-configure intl \
+    && docker-php-ext-install -j$(nproc) gd intl \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 RUN pecl install redis \
