--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   mysql:
     image: 'mysql:latest'
     container_name: mysql
+    command: '--default-authentication-plugin=mysql_native_password'
     environment:
       - 'MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}'
       - 'MYSQL_DATABASE=${MYSQL_DATABASE}'
