--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,11 +37,42 @@ http {
 	# resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 valid=60s;
 	# resolver_timeout 2s;
 
+	# localhost
 	server {
-		listen       80  default_server;
-		server_name  _;
-		root /usr/share/nginx/html;
-		index index.html;
+		listen 443 ssl http2;
+		listen [::]:443 ssl http2;
+	
+		server_name localhost;
+		set $base /usr/share/nginx/html;
+		root $base;
+	
+		# SSL
+		ssl_certificate /etc/nginx/ssl/localhost.crt;
+		ssl_certificate_key /etc/nginx/ssl/localhost.key;
+	
+		# index.php
+		index index.php index.html;
+
+		# index.php fallback
+		location / {
+			try_files $uri $uri/ /index.php?$query_string;
+		}
+
+		# handle .php
+		location ~ \.php$ {
+			include php_fastcgi.conf;
+		}
+	
+	}
+	
+	# HTTP redirect
+	server {
+		listen 80;
+		listen [::]:80;
+	
+		server_name .localhost;
+	
+		return 301 https://localhost$request_uri;
 	}
 
 	# load configs
