--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.2.14-fpm
 WORKDIR "/usr/share/nginx/html"
 
-# bcmath pdo_mysql intl gd zip xdebug redis memcached
+# bcmath pdo_mysql intl gd zip opcache xdebug redis memcached
 RUN apt-get update && apt-get install -y --no-install-recommends \
         wget \
         git \
@@ -15,9 +15,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         zlib1g-dev \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-configure intl \
-    && pecl install redis xdebug memcached\
-    && docker-php-ext-install -j$(nproc) gd intl bcmath pdo_mysql zip \
-    && docker-php-ext-enable zip redis xdebug memcached \
+    && docker-php-ext-configure opcache --enable-opcache \
+    && docker-php-ext-install -j$(nproc) gd intl bcmath pdo_mysql zip opcache \
+    && pecl install redis xdebug memcached \
+    && docker-php-ext-enable redis xdebug memcached \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
     
