--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -13,10 +13,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         unzip \
         zip \
         zlib1g-dev \
+        libxslt-dev \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-configure intl \
     && docker-php-ext-configure opcache --enable-opcache \
-    && docker-php-ext-install -j$(nproc) gd intl bcmath pdo_mysql zip opcache \
+    && docker-php-ext-install -j$(nproc) gd intl bcmath pdo_mysql zip xsl opcache \
     && pecl install redis xdebug memcached \
     && docker-php-ext-enable redis xdebug memcached \
     && apt-get clean \
