--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     image: 'redis:latest'
     container_name: redis
     restart: always
+    ports:
+      - '6379:6379'
     networks:
       backend:
         ipv4_address: 172.20.0.2
