--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -3,17 +3,17 @@ WORKDIR /usr/share/nginx/html
 
 # bcmath pdo_mysql intl gd zip opcache xdebug redis memcached
 RUN apt-get update && apt-get install -y --no-install-recommends \
-        wget \
-        git \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
-        libpng-dev \
-        libxml2-dev \
-        libmemcached-dev \
-        unzip \
-        zip \
-        zlib1g-dev \
-        libxslt-dev \
+    wget \
+    git \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libpng-dev \
+    libxml2-dev \
+    libmemcached-dev \
+    unzip \
+    zip \
+    zlib1g-dev \
+    libxslt-dev \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-configure intl \
     && docker-php-ext-configure opcache --enable-opcache \
@@ -22,11 +22,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && docker-php-ext-enable redis xdebug memcached \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
-    
+
 # Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Mailhog
-RUN curl -sS https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 \
-    && chmod +x mhsendmail_linux_amd64 \
-    && mv mhsendmail_linux_amd64 /usr/local/bin/mhsendmail
+COPY mhsendmail_linux_amd64 /usr/local/bin/mhsendmail
+RUN chmod +x /usr/local/bin/mhsendmail
