--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 mysql/*
 nginx/sites-enabled/*
+nginx/ssl/
 nginx-ssl/sites-enabled/*
 nginx-ssl/ssl/*
 .env
 elasticsearch/data/*
+nginx/sites-enabled
